--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "jssmartcheck",
   "version": "0.0.1",
   "description": "Property based generative testing for JavaScript",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "main": "dist/jssmartcheck.js",
   "scripts": {
     "prepublish": "browserify src/jssmartcheck.js -o dist/jssmartcheck.js -t 6to5ify",
@@ -31,7 +33,8 @@
     "6to5ify": "^4.1.0",
     "chai": "^1.10.0",
     "lodash": "~3.1.0",
-    "mochify": "^2.4.0"
+    "mochify": "^2.4.0",
+    "phantomjs": "^1.9.15"
   },
   "peerDependencies": {
     "lodash": "~3.1.0"
