--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "phantomjs": "^1.9.15"
   },
   "peerDependencies": {
-    "lodash": "~3.1.0"
+    "lodash": "~3.1.0",
+    "ret": "^0.1.10",
+    "discontinuous-range": "^1.0.0"
   }
 }
