--- a/package.json
+++ b/package.json
@@ -36,9 +36,10 @@
     "mochify": "^2.4.0",
     "phantomjs": "^1.9.15"
   },
-  "peerDependencies": {
+  "dependencies": {
+    "assert": "^1.3.0",
+    "discontinuous-range": "^1.0.0",
     "lodash": "~3.1.0",
-    "ret": "^0.1.10",
-    "discontinuous-range": "^1.0.0"
+    "ret": "^0.1.10"
   }
 }
