--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   ],
   "main": "dist/jssmartcheck.js",
   "scripts": {
-    "prepublish": "browserify src/jssmartcheck.js -o dist/jssmartcheck.js -t 6to5ify",
-    "test": "node_modules/.bin/mochify --watch --transform 6to5ify --reporter spec"
+    "prepublish": "browserify src/jssmartcheck.js -o dist/jssmartcheck.js -t babelify",
+    "test": "node_modules/.bin/mochify --watch --transform babelify --reporter spec"
   },
   "repository": {
     "type": "git",
@@ -30,7 +30,7 @@
   },
   "homepage": "https://github.com/mukeshsoni/jssmartcheck",
   "devDependencies": {
-    "6to5ify": "^4.1.0",
+    "babelify": "^5.0.3",
     "chai": "^1.10.0",
     "lodash": "^3.2.0",
     "mochify": "^2.4.0",
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "assert": "^1.3.0",
+    "babel": "^4.1.1",
     "discontinuous-range": "^1.0.0",
     "lodash": "~3.1.0",
     "ret": "^0.1.10"
