--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "assert": "^1.3.0",
     "babel": "^4.1.1",
     "discontinuous-range": "^1.0.0",
+    "extend": "^2.0.0",
     "lodash": "~3.1.0",
     "ret": "^0.1.10"
   }
