--- a/package.json
+++ b/package.json
@@ -2,13 +2,10 @@
   "name": "jssmartcheck",
   "version": "0.0.1",
   "description": "Property based generative testing for JavaScript",
-  "main": "src/jssmartcheck.js",
+  "main": "./dist/jssmartcheck.js",
   "scripts": {
-    "prepublish": "mkdir -p dist && browserify src/jssmartcheck.js -o dist/jssmartcheck.js -t babelify",
+    "prepublish": "mkdir -p dist && node_modules/.bin/babel -d dist src",
     "test": "node_modules/.bin/mochify --watch --transform babelify --reporter spec"
-  },
-  "browserify": {
-    "transform": "babelify"
   },
   "repository": {
     "type": "git",
