--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./dist/jssmartcheck.js",
   "scripts": {
     "prepublish": "mkdir -p dist && browserify src/jssmartcheck.js -t babelify -s jssmartcheck > dist/jssmartcheck.js",
-    "test": "node_modules/.bin/mochify --watch --transform babelify --reporter spec"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -13,11 +14,9 @@
   },
   "keywords": [
     "test",
-    "property",
-    "based",
+    "property based testing",
     "testing",
     "javascript",
-    "testing",
     "quickcheck"
   ],
   "author": "Mukesh Soni <mukeshsoni@gmail.com>",
@@ -31,7 +30,7 @@
     "chai": "^1.10.0",
     "lodash": "^3.2.0",
     "mochify": "^2.4.0",
-    "phantomjs": "^1.9.15"
+    "browserify": "14.3.0"
   },
   "dependencies": {
     "assert": "^1.3.0",
