--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
   "homepage": "https://github.com/mukeshsoni/jssmartcheck",
   "devDependencies": {
     "babelify": "^5.0.3",
+    "browserify": "14.3.0",
     "chai": "^1.10.0",
+    "jest": "^20.0.3",
     "lodash": "^3.2.0",
-    "mochify": "^2.4.0",
-    "browserify": "14.3.0"
+    "mochify": "^2.4.0"
   },
   "dependencies": {
     "assert": "^1.3.0",
